# optiga-trust

./: README.md
optiga-trust-m/: README
optiga-trust-x/: CMakeLists.txt  README.md
optiga-trust-x/examples/authenticate_chip/: mbedtls_config.h
optiga-trust-x/optiga/include/optiga/common/: MemoryMgmt.h
zephyr/: module.yml
